# chipbox-pars

./: .gitignore  LICENSE  README.md  ba  ca
open_sources/dfb1.0.0-orj/gfxdrivers/orion/: Makefile  Makefile.am  Makefile.in  libdirectfb_orion.la  orion_gfx.c  orion_gfx.lo  orion_gfx_2dlib.c  orion_gfx_2dlib.h  orion_gfx_2dlib.lo  orion_gfx_api.c  orion_gfx_api.lo  orion_gfx_file_func.lo  orion_gfx_hw_if.h  orion_gfx_hw_if.lo  orion_gfx_loglib.c  orion_gfx_loglib.h  orion_gfx_loglib.lo  orion_gfx_test_vect.h  orion_gfx_type_def.h
open_sources/libminigui-1.3.3/: .gitignore  AUTHORS  CREDITS  ChangeLog  Incore-buildlib  LICENSE.POLICY  LICENSE.POLICY.zh  Makefile.am  Makefile.in  NEWS  README  README.zh  TODO  Version  acconfig.h  aclocal.m4  buildlib-coldfire  buildlib-coldfire-5307  buildlib-ecos-ipaq  buildlib-flat  buildlib-handheld  buildlib-helio  buildlib-hhdrez328  buildlib-ipaq  buildlib-min  buildlib-vga16  buildlib-vr4181  buildlib-xcopilot  config.h.in  config.h.in~  config_optimized.h  configure  configure.in  makefile
open_sources/libminigui-1.3.3/autom4te.cache/: output.0  traces.0
open_sources/libminigui-1.3.3/configs/: Configure.help  config.in  defconfig  feature.in  mkdefconfig
open_sources/libminigui-1.3.3/etc/: .MiniGUI-flat.cfg.swp  Makefile  Makefile.am  Makefile.in  MiniGUI-3d.cfg  MiniGUI-flat.cfg  MiniGUI.cfg
open_sources/libminigui-1.3.3/examples/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  configure  configure.in
open_sources/libminigui-1.3.3/examples/src/: Makefile.am  Makefile.in  bmpbkgnd.c  button.c  combobox.c  dialogbox.c  edit.c  helloworld.c  input.c  listbox.c  listview.c  loadbmp.c  mginit.c  monthcal.c  painter.c  progressbar.c  scrnsaver.c  skindemo.c  timeeditor.c  trackbar.c  treeview.c  worldtime.c  worldtime.h
open_sources/libminigui-1.3.3/ext/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  template.c  template.h
open_sources/libminigui-1.3.3/ext/control/: Makefile  Makefile.am  Makefile.in  coolbar.c  coolbar.h  grid.c  grid.h  initmgext.c  listview.c  listview.h  monthcalendar.c  monthcalendar.h  spinbox.c  spinbox.h  treeview.c  treeview.h
open_sources/libminigui-1.3.3/ext/image/: Makefile  Makefile.am  Makefile.in  gif.c
open_sources/libminigui-1.3.3/ext/include/: Makefile  Makefile.am  Makefile.in  mgext.h  skin.h
open_sources/libminigui-1.3.3/ext/mywins/: Makefile  Makefile.am  Makefile.in  filedlg.c  helpwin.c  mywindows.c
open_sources/libminigui-1.3.3/ext/res/: Makefile  Makefile.am  Makefile.in
open_sources/libminigui-1.3.3/ext/skin/: Makefile  Makefile.am  Makefile.in  bmplabel.c  bmplabel.h  button.c  button.h  chkbutton.c  chkbutton.h  item_comm.h  label.c  label.h  mgcontrol.c  mgcontrol.h  rotslider.c  rotslider.h  skin.c  slider.c  slider.h
open_sources/libminigui-1.3.3/include/: Makefile.am  Makefile.in  common.h  common.h_orig  control.h  endianrw.h  gdi.h  keycodes.h  keycodes.h_orig  vcongui.h
open_sources/libminigui-1.3.3/m4/: Makefile.in
open_sources/libminigui-1.3.3/minigui/: minigui.cbp  minigui.layout
open_sources/libminigui-1.3.3/scripts/: mkconfig
open_sources/libminigui-1.3.3/scripts/lxdialog/: lxdialog
open_sources/libminigui-1.3.3/src/: Makefile.am  Makefile.in  template.c  template.h
open_sources/libminigui-1.3.3/src/client/: Makefile.in  cliconn.c  client.c
open_sources/libminigui-1.3.3/src/control/: Makefile.am  Makefile.in  button.c  combobox.c  ctrlmisc.c  edit.c  listbox.c  medit.c  menubutton.c  newtoolbar.c  progressbar.c  propsheet.c  simedit.c  static.c  toolbar.c  trackbar.c
open_sources/libminigui-1.3.3/src/font/: Makefile.am  Makefile.in  big5unimap.c  charset.c  charset.c_orig  devfont.c  euckrunimap.c  fontname.c  freetype.c  freetype.h  freetype2.c  freetype2.h  gb18030unimap.c  gbkunimap.c  gbunimap.c  jisunimap.c  mapunitogb.c  qpf.c  qpf.h  rawbitmap.c  rawbitmap.h  sjisunimap.c  sysfont.c  type1.c  type1.h  ujisunimap.c  varbitmap.c  varbitmap.h
open_sources/libminigui-1.3.3/src/gal/: Makefile.am  Makefile.in  gal.c  libggi.c  libggi.h  svgalib.c  svgalib.h  vga16.c  vga16.h
open_sources/libminigui-1.3.3/src/gdi/: Makefile.am  Makefile.in  attr.c  bitmap-comm.c  bitmap-lite.c  bitmap.c  clip-lite.c  clip.c  cliprect.c  draw-lite.c  draw.c  drawtext.c  gdi-lite.c  gdi.c  icon-lite.c  icon.c  loadicon.c  logfont.c  readbmp.c  rect.c  screen-lite.c  screen.c  text-lite.c  text.c
open_sources/libminigui-1.3.3/src/gui/: Makefile.am  Makefile.in  ctrlclass.c  de-kmap.c  de-latin1-kmap.c  de-latin1-nodeadkeys-kmap.c  defkeymap.c  dialog.c  es-cp850-kmap.c  es-kmap.c  fr-kmap.c  fr-pc-kmap.c  it-kmap.c  keyboard.c  linux_types.h  menu.c  window.c
open_sources/libminigui-1.3.3/src/ial/: 2410.c  2410.h  Makefile.am  Makefile.in  ads.c  ads.h  dummy.c  ep7211.c  ep7211.h  fpc.c  fpc.c_orig  fpc.h  ggi_input.c  helio.c  helio.h  ial.c  ipaq.c  ipaq.h  libggi.c  libggi.h  mc68x328.c  mpc823.c  mpc823.h  px255b.c  qvfb.c  svgaggi_internal.h  svgalib.c  svgalib.h  t800.c  t800.h  tf-stb.c  tf-stb.h  vr4181.c  vr4181.h
open_sources/libminigui-1.3.3/src/ime/: Makefile.in  hzinput.c  hzinput.h  pinyin.c  pinyin.h
open_sources/libminigui-1.3.3/src/include/: Makefile.am  Makefile.in  client.h  ctrlclass.h  dc.h  drawsemop.h  gal.h  ial.h  internals.h  menu.h  misc.h  newgal.h  oldgal.h  ourhdr.h  readbmp.h  sharedres.h  timer.h
open_sources/libminigui-1.3.3/src/kernel/: Makefile.am  Makefile.in  blockheap.c  cursor-lite.c  cursor-sa.c  cursor.c  desktop-comm.c  desktop-lite.c  desktop.c  event.c  init-lite.c  init.c  message.c  sharedres.c  timer-lite.c  timer.c  timer.c_orig  timer_posix.c
open_sources/libminigui-1.3.3/src/main/: Makefile.am  Makefile.in  main-lite.c  main.c
open_sources/libminigui-1.3.3/src/misc/: Makefile.am  Makefile.in  about.c  drawsemop.c  error.c  errorlog.c  listenfd.c  math.c  math3d.c  (+5 more)
open_sources/libminigui-1.3.3/vcongui/: Makefile  Makefile.am  Makefile.in  child.c  child.h  defs.h  error.c  error.h  key.c  key.h  paint.c  paint.h  terminal.c  terminal.h  vc.c  vc.h  vcongui.c  vt.c  vt.h
(+3605 files in other folders)
