SUBDIRS = src include scripts configs m4 

EXTRA_DIST = CREDITS Version ChangeLog.old \
             buildlib-coldfire       buildlib-handheld   buildlib-ipaq      buildlib-ppc     buildlib-xcopilot \
             buildlib-coldfire-5307  buildlib-helio      buildlib-m68k-elf  buildlib-vga16 \
             buildlib-flat           buildlib-hhdrez328  buildlib-min       buildlib-vr4181 \
             buildlib-ecos-ipaq \
             makefile LICENSE.POLICY LICENSE.POLICY.zh README.zh

# The directory where the include files will be installed
libminiguiincludedir = $(includedir)/minigui

# Which header files to install
libminiguiinclude_HEADERS =  config.h
